Added linux startup script